# learn_gear_academy

escrow/: Cargo.toml
escrow/escrow-io/: Cargo.toml
escrow/escrow-io/src/: lib.rs
escrow/src/: lib.rs
escrow/state/: Cargo.toml
escrow/tests/: escrow_test.rs
tamagotchi/: .metahash  Cargo.toml  build.rs  tamagotchi.meta.txt
tamagotchi/src/: lib.rs
tamagotchi/tamagotchi-io/: Cargo.toml
tamagotchi/tamagotchi-io/src/: lib.rs
tamagotchi/tests/: tamagotchi_creation_test.rs
